# grassy-bracketbot

./: .gitmodules
backend/: main.py  pyproject.toml  requirements.txt  test.py
backend/src/bracket_backend/: __init__.py
frontend/: minimal-robot-control.tsx  package-lock.json  package.json  pnpm-lock.yaml  robot-remote-control.tsx
frontend/app/: globals.css  page.tsx
frontend/app/face/: page.tsx
frontend/app/remote/: page.tsx
frontend/public/animations/: grassy_bot.riv
